--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1>Joyeux 16<sup>ème</sup> anniversaire !</h1>
+  <h1>Joyeux anniversaire !</h1>
   <div class="gateau-container">
     <svg id="gateau" width="100%" height="320" viewBox="0 0 400 320">
       <!-- Gâteau forêt noire, 2 niveaux avec cerises -->
