--- a/index.html
+++ b/index.html
@@ -59,16 +59,15 @@
       <!-- Ombre -->
       <ellipse cx="200" cy="305" rx="110" ry="23" fill="#5b3622" opacity="0.55"/>
       <!-- Corps du gâteau (chocolat) -->
-      <ellipse cx="200" cy="240" rx="110" ry="22" fill="#2d1810"/>
-      <rect x="90" y="160" width="220" height="80" fill="#2d1810"/>
+      <ellipse cx="200" cy="240" rx="110" ry="60" fill="#2d1810"/>
+            <rect x="90" y="160" width="220" height="80" fill="#2d1810"/>
       <!-- dessus -->
-      <ellipse cx="200" cy="160" rx="110" ry="60" fill="#43231fc7"/>
+      <ellipse cx="200" cy="160" rx="110" ry="60" fill="#43231f"/>
       <!-- Cerises Forêt Noire -->
-      <circle cx="120" cy="170" r="11" fill="#ce0b2d"/>
-      <circle cx="170" cy="153" r="11" fill="#ce0b2d"/>
-      <circle cx="230" cy="153" r="11" fill="#ce0b2d"/>
-      <circle cx="280" cy="170" r="11" fill="#ce0b2d"/>
-      <circle cx="200" cy="182" r="11" fill="#ce0b2d"/>
+      <circle cx="200" cy="125" r="8" fill="#ce0b2d"/>
+      <circle cx="170" cy="145" r="8" fill="#ce0b2d"/>
+      <circle cx="230" cy="145" r="8" fill="#ce0b2d"/>
+      <circle cx="200" cy="170" r="8" fill="#ce0b2d"/>
       <!-- Bougies générées dynamiquement -->
       <g id="bougies"></g>
     </svg>
