--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1>Joyeux anniversaire !</h1>
+  <h1>Joyeux anniversaire soeurette!</h1>
   <div class="gateau-container">
     <svg id="gateau" width="100%" height="340" viewBox="0 0 400 340">
       <!-- Ombre -->
@@ -71,11 +71,8 @@
       <!-- Bougies générées dynamiquement -->
       <g id="bougies"></g>
     </svg>
-    <div id="message">Fais un voeu avant de souffler tes bougies !</div>
     <div class="tuto">
-      Secoue ton téléphone pour souffler les bougies !<br/>
-      Sur ordinateur, appuie sur <b>Barre d’espace</b>, R pour rallumer.
-    </div>
+      Fais un voeu avant de souffler tes bougies
   </div>
   <script>
     const NB_BOUGIES = 16;
